--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -1,1 +1,11 @@
 /* Add CSS Styling */
+
+.avatar.proportioned {
+  width: 18.75rem;
+  height: auto;
+}
+
+.avatar.distorted {
+  width: 12.5rem;
+  height: 25rem;
+}
