--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -1,8 +1,16 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 .container {
   background: dodgerblue;
   border: 4px solid midnightblue;
-  width: 400px;
-  height: 300px;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .box {
