--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,11 @@
+p {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 img {
@@ -8,11 +14,26 @@ img {
 }
 
 .title {
-  font-size: 36px;
+  font-size: 2.25rem;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
-/* do not edit this footer */
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 200px;
+  text-align: center;
+}
+
 .footer {
   position: fixed;
   bottom: 0;
